--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>todolist</title>
-</head>
-<body>
-    <h1>It's <%= day %>!</h1>
-</body>
-</html>
+<%- include("header") %>
+    <div class="box" id="heading">
+        <h1><%=listTitle%></h1>
+    </div>
+
+    <div class="box">
+        <%for(let i=0; i < newItems.length; i++){ %>
+            <div class="item">
+                <input type="checkbox">
+                <p> <%=newItems[i]%></p>
+            </div>
+            <% } %>
+
+            <form action="/" method="post">
+                <input type="text" name="todoItem" placeholder="New Item" autocomplete="off">
+                <button type="submit" name="list" value=<%=listTitle%>>+</button>
+            </form>
+    </div>
+    
+<%- include("footer") %>
